# pcph

./: .gitignore  CHANGELOG.md  Makefile  README.md  parmonad.eventlog  pcph.cabal  project.nix  release.nix  strat1.eventlog  strat2.eventlog  sudoku2.eventlog  sudoku3.eventlog  sudoku4.eventlog  sudoku5.eventlog
nix/: base-4.11.1.0.nix  base-4.8.2.0.nix  ghc-boot-th-8.4.4.nix  ghc-events-0.8.0.2.nix  gtk-0.14.7.nix  template-haskell-2.13.0.0.nix  threadscope-0.2.11.1.nix
src/: Chan1.hs  GetURL.hs  GetUrls1.hs  GetUrls2.hs  GetUrls3.hs  GetUrls4.hs  GetUrls5.hs  GetUrls6.hs  Logger.hs  Phonebook.hs  Sudoku.hs  TimeIt.hs  TreeNFData.hs  fork1.hs  parbuf1.hs  parmonad.hs  reminders1.hs  reminders2.hs  repa1.hs  rpar_fib.hs  rpar_rpar.hs  rpar_rpar_rseq_rseq.hs  rpar_rseq.hs  rpar_rseq_rseq.hs  rsa1.hs  rsa2.hs  rsa3.hs  strat1.hs  strat2.hs  sudoku1.hs  sudoku2.hs  sudoku3.hs  sudoku4.hs  sudoku5.hs
