cabal-version:       2.4
name:                pcph
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
extra-source-files:  CHANGELOG.md

common core
  build-depends:       base ^>=4.12
                     , parallel ^>= 3.2
                     , time ^>= 1.9
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

common exe
  import:              core
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

library
  import:              core
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

executable rpar_rpar
  import:              exe
  hs-source-dirs:      src
  main-is:             rpar_rpar.hs
