cabal-version:       2.4
name:                pcph
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
extra-source-files:  CHANGELOG.md

common core
  build-depends:       base
                     , parallel
                     , deepseq
                     , time
                     , array
  default-language:    Haskell2010

common exe
  import:              core
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       pcph

library
  import:              core
  hs-source-dirs:      src
  exposed-modules:     Sudoku
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

executable rpar_rpar
  import:              exe
  hs-source-dirs:      src
  main-is:             rpar_rpar.hs

executable rpar_rseq
  import:              exe
  hs-source-dirs:      src
  main-is:             rpar_rseq.hs

executable rpar_rseq_rseq
  import:              exe
  hs-source-dirs:      src
  main-is:             rpar_rseq_rseq.hs

executable rpar_rpar_rseq_rseq
  import:              exe
  hs-source-dirs:      src
  main-is:             rpar_rpar_rseq_rseq.hs

executable rpar_fib
  import:              exe
  hs-source-dirs:      src
  main-is:             rpar_fib.hs

executable sudoku1
  import:              exe
  hs-source-dirs:      src
  main-is:             sudoku1.hs
  other-modules:       Sudoku

executable sudoku2
  import:              exe
  hs-source-dirs:      src
  main-is:             sudoku2.hs
  build-depends:       pcph
  other-modules:       Sudoku
