cabal-version:       2.4
name:                pcph
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
extra-source-files:  CHANGELOG.md

common core
  build-depends:       base
                     , parallel
                     , monad-par
                     , deepseq
                     , bytestring
                     , containers
                     , repa
                     , time
                     , array
  default-language:    Haskell2010

common exe
  import:              core
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

common exe-threaded
  import:              exe
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              core
  hs-source-dirs:      src
  exposed-modules:     Sudoku
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

executable rpar_rpar
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rpar_rpar.hs

executable rpar_rseq
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rpar_rseq.hs

executable rpar_rseq_rseq
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rpar_rseq_rseq.hs

executable rpar_rpar_rseq_rseq
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rpar_rpar_rseq_rseq.hs

executable rpar_fib
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rpar_fib.hs

executable sudoku1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             sudoku1.hs
  other-modules:       Sudoku

executable sudoku2
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             sudoku2.hs
  build-depends:       pcph
  other-modules:       Sudoku

executable sudoku3
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             sudoku3.hs
  build-depends:       pcph
  other-modules:       Sudoku

executable strat1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             strat1.hs
  build-depends:       pcph

executable strat2
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             strat2.hs
  build-depends:       pcph

executable sudoku4
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             sudoku4.hs
  build-depends:       pcph
  other-modules:       Sudoku

executable sudoku5
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             sudoku5.hs
  build-depends:       pcph
  other-modules:       Sudoku

executable rsa1
  import:              core
  hs-source-dirs:      src
  main-is:             rsa1.hs
  build-depends:       pcph

executable rsa2
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rsa2.hs
  build-depends:       pcph

executable rsa3
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             rsa3.hs
  build-depends:       pcph

executable parmonad
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             parmonad.hs
  build-depends:       pcph

executable parbuf1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             parbuf1.hs
  build-depends:       pcph

executable repa1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             repa1.hs
  build-depends:       pcph

executable fork1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             fork1.hs
  build-depends:       pcph

executable reminders1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             reminders1.hs
  build-depends:       pcph

executable reminders2
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             reminders2.hs
  build-depends:       pcph

executable logger
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             Logger.hs
  build-depends:       pcph

executable phonebook
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             Phonebook.hs
  build-depends:       pcph

executable chan1
  import:              exe-threaded
  hs-source-dirs:      src
  main-is:             Chan1.hs
  build-depends:       pcph
